--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -100,6 +100,7 @@ GAT: &GAT
   label_feat: False
   delta: 0.2
   gpu_id: 0
+  use_cpu: False
 
 
 # -------model instance + dataset-------
@@ -461,9 +462,10 @@ debag:
  delta: 0.2
  label_feat: True
  n_hid: 16
- num_layer: 15
- gpu_id: 2
+ num_layer: 3
+ gpu_id: 0
  epochs: 200
+ use_cpu: True
  run: 1
 
 
